WIP National awakening stuff

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -348,7 +348,34 @@
   # Decisions
   ##########################
   PB_RUS_Okhrana:0 "The Second Time of Troubles"
-  PB_RUS_Okhrana_desc:0 "\n\n\n\n\n\nThe so-called §YFirst National Awakening§! ended in the defeat of the nationalist forces, yet for many the wars of independence never ended. Across the Ukraine, Poland, the Baltics, and Finland nationalist forces continue to struggle against Russian rule. Combating this is the §YDepartment for Protecting the Public Security and Order§!, colloquially known as the §YOkhrana§! or Guard Department. Previously just the state security apparatus of the Empire, the Okhrana was expanded dramatically following the Nationalist Rebellions to combat the remnant rebel forces.\n\nThe Okhrana is reliant on resources provided §Ymonthly§!; these resources must be used carefully to target and eliminate key figures in the secessionist movements to reduce their power. Additional §Ymonthly resources§! can be acquired by expanding Okhrana operations centers; however, these will require a large initial investment before becoming operational.\n\nOur goal is the §rdecapitation§! of rebel leadership, however eliminating leaders of rebel factions may drive them in different ideological directions and lead to other figures assuming command of the movement. A rebel group is §Yonly§! fully defeated once §Yall§! the most noteworthy members of their leadership are liquidated.\n\nIf the Okhrana fails to control the power of a rebel group, there may be §rdrastic§! consequences if they perceive us to be weak or distracted.\n\nCurrently, the Okhrana has access to £RUS_Okhrana_Resources §G[?RUS.RUS_Okhrana_Resources]§! resources\n\n§YPolish Resistance Power:§! [?RUS.RUS_Polish_Resistance_Power]%\n§YUkrainian Resistance Power:§! [?RUS.RUS_Ukraine_Resistance_Power]%\n§YBaltic Resistance Power:§! [?RUS.RUS_Baltic_Resistance_Power]%\n§YFinnish Resistance Power:§! [?RUS.RUS_Finnish_Resistance_Power]%\n\n\n\n\n\n\n\n\n\n\n\n\n"
+  PB_RUS_Okhrana_desc:0 "\n\n\n\n\n\nThe so-called §YFirst National Awakening§! ended in the defeat of the nationalist forces, yet for many the wars of independence never ended. Across the Ukraine, Poland, the Baltics, and Finland nationalist forces continue to struggle against Russian rule. Combating this is the §YDepartment for Protecting the Public Security and Order§!, colloquially known as the §YOkhrana§! or Guard Department. Previously just the state security apparatus of the Empire, the Okhrana was expanded dramatically following the Nationalist Rebellions to combat the remnant rebel forces.\n\nThe Okhrana is reliant on resources provided §Ymonthly§!; these resources must be used carefully to target and eliminate key figures in the secessionist movements to reduce their power. Additional §Ymonthly resources§! can be acquired by expanding Okhrana operations centers; however, these will require a large initial investment before becoming operational.\n\nOur goal is the §rdecapitation§! of rebel leadership, however eliminating leaders of rebel factions may drive them in different ideological directions and lead to other figures assuming command of the movement. A rebel group is §Yonly§! fully defeated once §Yall§! the most noteworthy members of their leadership are liquidated.\n\nIf the Okhrana fails to control the power of a rebel group, there may be §rdrastic§! consequences if they perceive us to be weak or distracted.\n\nCurrently, the Okhrana has access to £RUS_Okhrana_Resources §G[?RUS.RUS_Okhrana_Resources]§! (§G+[?RUS.RUS_Okhrana_Monthly_Resources]§!) resources\n\n§YPolish Resistance Power:§! [?RUS.RUS_Polish_Resistance_Power]%\n§YUkrainian Resistance Power:§! [?RUS.RUS_Ukraine_Resistance_Power]%\n§YBaltic Resistance Power:§! [?RUS.RUS_Baltic_Resistance_Power]%\n§YFinnish Resistance Power:§! [?RUS.RUS_Finnish_Resistance_Power]%\n\n\n\n\n\n\n\n\n\n\n\n\n"
+
+  PB_Okhrana_Timed_Decision:0 "Anti-Russian Agitation"
+  PB_Okhrana_Timed_Decision2:0 "Anti-Russian Insurgency Attack"
+  PB_Okhrana_Timed_Decision3:0 "Monthly Okhrana Funding Arrives"
+
+  RUS_Okhrana_Resources_Twenty_tt:0 "We have more than £RUS_Okhrana_Resources §G20§! Okhrana Resources"
+  RUS_Okhrana_Resources_Forty_tt:0 "We have more than £RUS_Okhrana_Resources §G40§! Okhrana Resources"
+  RUS_Okhrana_Resources_Sixty_tt:0 "We have more than £RUS_Okhrana_Resources §G60§! Okhrana Resources"
+
+  PB_RUS_Okhrana_Resource_Monthly_Increase_tt:0 "£RUS_Okhrana_Resources §YOkhrana Monthly Resource§! Gain will §Gincrease§! by §G5§! "
+
+  PB_Expand_Okhrana_Warsaw:0 "Expand the Warsaw Department"
+  PB_Expand_Okhrana_Kiev:0 "Expand the Kiev Department"
+  PB_Expand_Okhrana_Riga:0 "Expand the Riga Department"
+  PB_Expand_Okhrana_Helsinki:0 "Expand the Helsinki Department"
+
+  PB_RUS_Eliminate_Polish_Resistance_Leader_tt:0 "The current Polish Resistance Leader will be §Reliminated§!"
+  PB_RUS_Upgrade_Polish_Subcommanders_tt:0 "The leadership of the Polish Resistance will §Yshift§!"
+
+  PB_RUS_Eliminate_Ukrainian_Resistance_Leader_tt:0 "The current Ukrainian Resistance Leader will be §Reliminated§!"
+  PB_RUS_Eliminate_Baltic_Resistance_Leader_tt:0 "The current Baltic Resistance Leader will be §Reliminated§!"
+  PB_RUS_Eliminate_Finnish_Resistance_Leader_tt:0 "The current Finnish Resistance Leader will be §Reliminated§!"
+
+  PB_RUS_Has_Recently_Eliminated_Polish_Resistance_Leader:0 "Recently Eliminated Polish Resistance Leader"
+  PB_RUS_Has_Recently_Eliminated_Ukrainian_Resistance_Leader:0 "Recently Eliminated Ukrainian Resistance Leader"
+  PB_RUS_Has_Recently_Eliminated_Baltic_Resistance_Leader:0 "Recently Eliminated Baltic Resistance Leader"
+  PB_RUS_Has_Recently_Eliminated_Finnish_Resistance_Leader:0 "Recently Eliminated Finnish Resistance Leader"
 
   RUS_OKH_Polish_Resistance_Pilsudski_Leader:0 "£RUS_Pilsudski_Target"
   RUS_OKH_Polish_Resistance_Komorowski_Leader:0 "£RUS_Komorski_Target"
