--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -1288,7 +1288,7 @@
   SCA_Total_War_Lol_2_tt:0 "§HYou only need to defeat the United Commonwealth to force a peace deal.§!"
 
   SCA_President_Portrait_1:0 "Earl Browder:\n--------------------------------\n\n\n\n\n\n\n£GFX_SCA_Earl_Browder\n\n\n\n\n\n\n\n--------------------------------"
-  SCA_President_Portrait_2:0 "Gus Hall:\n--------------------------------\n\n\n\n\n\n\n£GFX_SCA_Gus_Hall\n\n\n\n\n\n\n\n--------------------------------"
+  SCA_President_Portrait_2:0 "Dorothy Day:\n--------------------------------\n\n\n\n\n\n\n£SCA_Dorothy_Day\n\n\n\n\n\n\n\n--------------------------------"
   SCA_President_Portrait_3:0 "William Foster:\n--------------------------------\n\n\n\n\n\n\n£GFX_SCA_William_Foster\n\n\n\n\n\n\n\n--------------------------------"
 
   SCA_beigeBoy_Event_Loc:0 "This event was written by a member of the Pax Discord: §HbeigeBoy§!"
@@ -1434,9 +1434,9 @@
   SCA24optc:0 "The North will remain under direct Continental control."
 
   SCA25title:0 "The First Presidential  Election"
-  SCA25desc:0 "Today marks the most important moment in this nations great history, arguably greater than the moment Butler and his dedicated followers marched west into unknown territory. Today the first democratic presidential election is to be held which will see the rule of the nation be transferred away from Butler and into the hands of one of three potential candidates. Those being Earl Browder, Gus Hall, and William Foster. Butler will still maintain control over the military for at least the next few years but the administration of a nation as large as this one has become simply to mentally demanding for our great hero. The question is now for will win this momentous election?" " 
+  SCA25desc:0 "Today marks the most important moment in this nations great history, arguably greater than the moment Butler and his dedicated followers marched west into unknown territory. Today the first democratic presidential election is to be held which will see the rule of the nation be transferred away from Butler and into the hands of one of three potential candidates. Those being Earl Browder, Dorothy Day, and William Foster. Butler will still maintain control over the military for at least the next few years but the administration of a nation as large as this one has become simply to mentally demanding for our great hero. The question is now for will win this momentous election?" " 
   SCA25opta:0 "Earl Browder"
-  SCA25optb:0 "Gus Hall"
+  SCA25optb:0 "Dorothy Day"
   SCA25optc:0 "William Foster"
 
   SCA26title:0 "The Confederacy Occupation Question"
