--- a/localisation/english/PB_Super_Events_l_english.yml
+++ b/localisation/english/PB_Super_Events_l_english.yml
@@ -7,7 +7,7 @@
   SPEVNT_London_Stock_Crisis_TEXT:0 "In other periods of depression, it has always been possible to see some things which were solid and upon which you could base hope... but as I look around about, I now see nothing to give ground to hope.\n\n§O-John Maynard Keynes-§!"
   SPEVNT_London_Stock_Crisis_CLOSETEXT:0 "§OAN EMPIRE IN CRISIS?§!"
 
-  SPEVNT_Polish_Uprising:0 "THE NATIONAL AWAKENING"
+  SPEVNT_Polish_Uprising:0 "THE SECOND NATIONAL AWAKENING"
   SPEVNT_Polish_Uprising_TEXT:0 "Though the flame of liberty may sometimes cease to shine, the coal can never expire.\n\n§O-Thomas Paine, The Crisis No. I.-§!"
   SPEVNT_Polish_Uprising_CLOSETEXT:0 "§OPEACE, BREAD AND FREEDOM§!"
 
