--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -4137,6 +4137,81 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   POL_Uprising_cn_ADJ:0 "Polish"
   POL_Uprising_an_ADJ:0 "Polish"
 
+  POL_Uprising_Agrarian_ni:0 "Committee for Polish Liberation"
+  POL_Uprising_Agrarian_ni_DEF:0 "The Committee for Polish Liberation"
+  POL_Uprising_Agrarian_ds:0 "Free Polish Army"
+  POL_Uprising_Agrarian_ds_DEF:0 "The Free Polish Army"
+  POL_Uprising_Agrarian_rc:0 "Free Polish Army"
+  POL_Uprising_Agrarian_rc_DEF:0 "The Free Polish Army"
+  POL_Uprising_Agrarian_an:0 "Free Polish Army"
+  POL_Uprising_Agrarian_an_DEF:0 "The Free Polish Army"
+  POL_Uprising_Agrarian_cn:0 "Free Polish Army"
+  POL_Uprising_Agrarian_cn_DEF:0 "The Free Polish Army"
+  POL_Uprising_Agrarian_lb:0 "Free Polish Army"
+  POL_Uprising_Agrarian_lb_DEF:0 "The Free Polish Army"
+  POL_Uprising_Agrarian_ss:0 "Agrarian People's Army of Poland"
+  POL_Uprising_Agrarian_ss_DEF:0 "The Agrarian People's Army of Poland"
+  POL_Uprising_Agrarian_jc:0 "Revolutionary Army of Poland"
+  POL_Uprising_Agrarian_jc_DEF:0 "The Polish Revolutionary Directory"
+  POL_Uprising_Agrarian_ni_ADJ:0 "Polish"
+  POL_Uprising_Agrarian_rc_ADJ:0 "Polish"
+  POL_Uprising_Agrarian_lb_ADJ:0 "Polish"
+  POL_Uprising_Agrarian_ss_ADJ:0 "Polish"
+  POL_Uprising_Agrarian_jc_ADJ:0 "Polish"
+  POL_Uprising_Agrarian_ds_ADJ:0 "Polish"
+  POL_Uprising_Agrarian_cn_ADJ:0 "Polish"
+  POL_Uprising_Agrarian_an_ADJ:0 "Polish"
+
+  POL_Uprising_Non_Socialist_ni:0 "Committee for Polish Liberation"
+  POL_Uprising_Non_Socialist_ni_DEF:0 "The Committee for Polish Liberation"
+  POL_Uprising_Non_Socialist_ds:0 "Free Polish Army"
+  POL_Uprising_Non_Socialist_ds_DEF:0 "The Free Polish Army"
+  POL_Uprising_Non_Socialist_rc:0 "Free Polish Army"
+  POL_Uprising_Non_Socialist_rc_DEF:0 "The Free Polish Army"
+  POL_Uprising_Non_Socialist_an:0 "Free Polish Army"
+  POL_Uprising_Non_Socialist_an_DEF:0 "The Free Polish Army"
+  POL_Uprising_Non_Socialist_cn:0 "Free Polish Army"
+  POL_Uprising_Non_Socialist_cn_DEF:0 "The Free Polish Army"
+  POL_Uprising_Non_Socialist_lb:0 "Free Polish Army"
+  POL_Uprising_Non_Socialist_lb_DEF:0 "The Free Polish Army"
+  POL_Uprising_Non_Socialist_ss:0 "Agrarian People's Army of Poland"
+  POL_Uprising_Non_Socialist_ss_DEF:0 "The Agrarian People's Army of Poland"
+  POL_Uprising_Non_Socialist_jc:0 "Revolutionary Army of Poland"
+  POL_Uprising_Non_Socialist_jc_DEF:0 "The Polish Revolutionary Directory"
+  POL_Uprising_Non_Socialist_ni_ADJ:0 "Polish"
+  POL_Uprising_Non_Socialist_rc_ADJ:0 "Polish"
+  POL_Uprising_Non_Socialist_lb_ADJ:0 "Polish"
+  POL_Uprising_Non_Socialist_ss_ADJ:0 "Polish"
+  POL_Uprising_Non_Socialist_jc_ADJ:0 "Polish"
+  POL_Uprising_Non_Socialist_ds_ADJ:0 "Polish"
+  POL_Uprising_Non_Socialist_cn_ADJ:0 "Polish"
+  POL_Uprising_Non_Socialist_an_ADJ:0 "Polish"
+
+  POL_Uprising_Last_Stand_ni:0 "Committee for Polish Liberation"
+  POL_Uprising_Last_Stand_ni_DEF:0 "The Committee for Polish Liberation"
+  POL_Uprising_Last_Stand_ds:0 "Polish Remnant Forces"
+  POL_Uprising_Last_Stand_ds_DEF:0 "The Polish Remnant Forces"
+  POL_Uprising_Last_Stand_rc:0 "Polish Remnant Forces"
+  POL_Uprising_Last_Stand_rc_DEF:0 "The Polish Remnant Forces"
+  POL_Uprising_Last_Stand_an:0 "Polish Remnant Forces"
+  POL_Uprising_Last_Stand_an_DEF:0 "The Polish Remnant Forces"
+  POL_Uprising_Last_Stand_cn:0 "Polish Remnant Forces"
+  POL_Uprising_Last_Stand_cn_DEF:0 "The Polish Remnant Forces"
+  POL_Uprising_Last_Stand_lb:0 "Polish Remnant Forces"
+  POL_Uprising_Last_Stand_lb_DEF:0 "The Polish Remnant Forces"
+  POL_Uprising_Last_Stand_ss:0 "Agrarian People's Army of Poland"
+  POL_Uprising_Last_Stand_ss_DEF:0 "The Agrarian People's Army of Poland"
+  POL_Uprising_Last_Stand_jc:0 "Revolutionary Army of Poland"
+  POL_Uprising_Last_Stand_jc_DEF:0 "The Polish Revolutionary Directory"
+  POL_Uprising_Last_Stand_ni_ADJ:0 "Polish"
+  POL_Uprising_Last_Stand_rc_ADJ:0 "Polish"
+  POL_Uprising_Last_Stand_lb_ADJ:0 "Polish"
+  POL_Uprising_Last_Stand_ss_ADJ:0 "Polish"
+  POL_Uprising_Last_Stand_jc_ADJ:0 "Polish"
+  POL_Uprising_Last_Stand_ds_ADJ:0 "Polish"
+  POL_Uprising_Last_Stand_cn_ADJ:0 "Polish"
+  POL_Uprising_Last_Stand_an_ADJ:0 "Polish"
+
   UKR_Uprising_ni:0 "New Ukrainian Insurrectionist Army"
   UKR_Uprising_ni_DEF:0 "The New Ukrainian Insurrectionist Army"
   UKR_Uprising_ds:0 "Ukrainian Insurrectionist Army"
@@ -4162,6 +4237,31 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   UKR_Uprising_cn_ADJ:0 "Ukrainian"
   UKR_Uprising_an_ADJ:0 "Ukrainian"
 
+  UKR_Uprising_democratic_ni:0 "New Ukrainian Insurrectionist Army"
+  UKR_Uprising_democratic_ni_DEF:0 "The New Ukrainian Insurrectionist Army"
+  UKR_Uprising_democratic_ds:0 "Ukrainian Insurrectionist Army"
+  UKR_Uprising_democratic_ds_DEF:0 "The Ukrainian Insurrectionist Army"
+  UKR_Uprising_democratic_rc:0 "Provisional Ukrainian Government"
+  UKR_Uprising_democratic_rc_DEF:0 "The Provisional Ukrainian Government"
+  UKR_Uprising_democratic_an:0 "Provisional Ukrainian Government"
+  UKR_Uprising_democratic_an_DEF:0 "The Provisional Ukrainian Government"
+  UKR_Uprising_democratic_cn:0 "Provisional Ukrainian Government"
+  UKR_Uprising_democratic_cn_DEF:0 "The Provisional Ukrainian Government"
+  UKR_Uprising_democratic_lb:0 "Provisional Ukrainian Government"
+  UKR_Uprising_democratic_lb_DEF:0 "The Provisional Ukrainian Government"
+  UKR_Uprising_democratic_ss:0 "Ukrainian Provisional Rada"
+  UKR_Uprising_democratic_ss_DEF:0 "The Ukrainian Provisional Rada"
+  UKR_Uprising_democratic_jc:0 "Ukrainian Provisional Rada"
+  UKR_Uprising_democratic_jc_DEF:0 "The Ukrainian Provisional Rada"
+  UKR_Uprising_democratic_ni_ADJ:0 "Ukrainian"
+  UKR_Uprising_democratic_rc_ADJ:0 "Ukrainian"
+  UKR_Uprising_democratic_lb_ADJ:0 "Ukrainian"
+  UKR_Uprising_democratic_ss_ADJ:0 "Ukrainian"
+  UKR_Uprising_democratic_jc_ADJ:0 "Ukrainian"
+  UKR_Uprising_democratic_ds_ADJ:0 "Ukrainian"
+  UKR_Uprising_democratic_cn_ADJ:0 "Ukrainian"
+  UKR_Uprising_democratic_an_ADJ:0 "Ukrainian"
+
   UKR_Uprising_anarchist_ni:0 "New Ukrainian Insurrectionist Army"
   UKR_Uprising_anarchist_ni_DEF:0 "The New Ukrainian Insurrectionist Army"
   UKR_Uprising_anarchist_ds:0 "Ukrainian Insurrectionist Army"
@@ -4176,8 +4276,8 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   UKR_Uprising_anarchist_lb_DEF:0 "The Provisional Ukrainian Government"
   UKR_Uprising_anarchist_ss:0 "Ukrainian Provisional Rada"
   UKR_Uprising_anarchist_ss_DEF:0 "The Ukrainian Provisional Rada"
-  UKR_Uprising_anarchist_jc:0 "Ukrainian Territorial Army"
-  UKR_Uprising_anarchist_jc_DEF:0 "The Ukrainian Territorial Army"
+  UKR_Uprising_anarchist_jc:0 "Makhnovite Ukraine"
+  UKR_Uprising_anarchist_jc_DEF:0 "The Federation of Ukrainian People's Communes"
   UKR_Uprising_anarchist_ni_ADJ:0 "Ukrainian"
   UKR_Uprising_anarchist_rc_ADJ:0 "Ukrainian"
   UKR_Uprising_anarchist_lb_ADJ:0 "Ukrainian"
@@ -4212,8 +4312,33 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   BAL_Uprising_cn_ADJ:0 "Baltic"
   BAL_Uprising_an_ADJ:0 "Baltic"
 
-  BAL_ni_perkonuists_ni:0 "Resurrectionist Baltic Alliance"
-  BAL_ni_perkonuists_ni_DEF:0 "The Resurrectionist Baltic Alliance"
+  BAL_Uprising_Socialist_ni:0 "Resurrectionist Baltic Alliance"
+  BAL_Uprising_Socialist_ni_DEF:0 "The Resurrectionist Baltic Alliance"
+  BAL_Uprising_Socialist_ds:0 "Baltic Independence Committee"
+  BAL_Uprising_Socialist_ds_DEF:0 "The Baltic Independence Committee"
+  BAL_Uprising_Socialist_rc:0 "Baltic Liberation Army"
+  BAL_Uprising_Socialist_rc_DEF:0 "The Baltic Liberation Army"
+  BAL_Uprising_Socialist_an:0 "Forest Brothers"
+  BAL_Uprising_Socialist_an_DEF:0 "The Forest Brothers"
+  BAL_Uprising_Socialist_cn:0 "Forest Brothers"
+  BAL_Uprising_Socialist_cn_DEF:0 "The Forest Brothers"
+  BAL_Uprising_Socialist_lb:0 "Forest Brothers"
+  BAL_Uprising_Socialist_lb_DEF:0 "The Forest Brothers"
+  BAL_Uprising_Socialist_ss:0 "Baltic Free States"
+  BAL_Uprising_Socialist_ss_DEF:0 "The Baltic Free States"
+  BAL_Uprising_Socialist_jc:0 "Revolutionary Baltic Forces"
+  BAL_Uprising_Socialist_jc_DEF:0 "The Revolutionary Baltic Forces"
+  BAL_Uprising_Socialist_ni_ADJ:0 "Baltic"
+  BAL_Uprising_Socialist_rc_ADJ:0 "Baltic"
+  BAL_Uprising_Socialist_lb_ADJ:0 "Baltic"
+  BAL_Uprising_Socialist_ss_ADJ:0 "Baltic"
+  BAL_Uprising_Socialist_jc_ADJ:0 "Baltic"
+  BAL_Uprising_Socialist_ds_ADJ:0 "Baltic"
+  BAL_Uprising_Socialist_cn_ADJ:0 "Baltic"
+  BAL_Uprising_Socialist_an_ADJ:0 "Baltic"
+
+  BAL_ni_perkonuists_ni:0 "Pērkonkrust Army of the Baltic Peoples"
+  BAL_ni_perkonuists_ni_DEF:0 "The Pērkonkrust Army of the Baltic Peoples"
   BAL_ni_perkonuists_ds:0 "Baltic Independence Committee"
   BAL_ni_perkonuists_ds_DEF:0 "The Baltic Independence Committee"
   BAL_ni_perkonuists_rc:0 "Baltic Liberation Army"
@@ -4261,3 +4386,28 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   FIN_Uprising_ds_ADJ:0 "Finnish"
   FIN_Uprising_cn_ADJ:0 "Finnish"
   FIN_Uprising_an_ADJ:0 "Finnish"
+
+  FIN_Uprising_Jacobin_ni:0 "Forces for Greater Finland"
+  FIN_Uprising_Jacobin_ni_DEF:0 "The Forces for Greater Finland"
+  FIN_Uprising_Jacobin_ds:0 "Finnish Military Alliance"
+  FIN_Uprising_Jacobin_ds_DEF:0 "The Finnish Military Alliance"
+  FIN_Uprising_Jacobin_rc:0 "Provisional Finnish Republic"
+  FIN_Uprising_Jacobin_rc_DEF:0 "The Provisional Finnish Republic"
+  FIN_Uprising_Jacobin_an:0 "Provisional Finnish Republic"
+  FIN_Uprising_Jacobin_an_DEF:0 "The Provisional Finnish Republic"
+  FIN_Uprising_Jacobin_cn:0 "Provisional Finnish Republic"
+  FIN_Uprising_Jacobin_cn_DEF:0 "The Provisional Finnish Republic"
+  FIN_Uprising_Jacobin_lb:0 "Provisional Finnish Republic"
+  FIN_Uprising_Jacobin_lb_DEF:0 "The Provisional Finnish Republic"
+  FIN_Uprising_Jacobin_ss:0 "Provisional Finnish Republic"
+  FIN_Uprising_Jacobin_ss_DEF:0 "The Provisional Finnish Republic"
+  FIN_Uprising_Jacobin_jc:0 "Finnish Republican Army"
+  FIN_Uprising_Jacobin_jc_DEF:0 "The Finnish Republican Army"
+  FIN_Uprising_Jacobin_ni_ADJ:0 "Finnish"
+  FIN_Uprising_Jacobin_rc_ADJ:0 "Finnish"
+  FIN_Uprising_Jacobin_lb_ADJ:0 "Finnish"
+  FIN_Uprising_Jacobin_ss_ADJ:0 "Finnish"
+  FIN_Uprising_Jacobin_jc_ADJ:0 "Finnish"
+  FIN_Uprising_Jacobin_ds_ADJ:0 "Finnish"
+  FIN_Uprising_Jacobin_cn_ADJ:0 "Finnish"
+  FIN_Uprising_Jacobin_an_ADJ:0 "Finnish"
