--- a/localisation/english/PB_Martians_l_english.yml
+++ b/localisation/english/PB_Martians_l_english.yml
@@ -4,3 +4,12 @@
   PB_Mars_First_Wave:0 "The First Wave"
   PB_Mars_Extermination_or_Extinction:0 "Extermination or Extinction"
   PB_Mars_Stunted_Development:0 "Stunted Development"
+
+# Events #
+  invasion.1.t:0 "Flashes on Mars Detected"
+  invasion.1.d:0 ""
+  invasion.1.a:0 "How strange!"
+
+  invasion.2.t:0 "Meteor Crashes in New Jersey"
+  invasion.2.d:0 ""
+  invasion.2.a:0 "Is that thing...moving?"
