--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -990,6 +990,39 @@
   PBNews.250.d:0 "The Imperial Broadcasting Service announced the death of her Imperial Majesty Queen Victoria, who passed in her sleep yesterday evening. Victoria was the longest reigning monarch in human history, leading the British Empire through the Second Renaissance and the Great War. Victoria’s death has been met with a period of national mourning and the suspension of telescreen programming across the IBS for the remainder of the day.\n\nGovernor-General Prince Albert, previously moved to Carnegia as the heir apparent, is expected to be coronated later this evening."
   PBNews.250.a:0 "A new British Empire follows in her wake"
 
+	PBNews.260.t:0 "LIFE ON MARS?"
+	PBNews.260.d:0 "In a press release, the International Astronomical Society released a statement that they had detected anomalous lights emanating from the Martain surface. The implications of this remain unclear, however, and most reputable astronomers have stated that the incident was likely caused by some form of gas expulsion.\n\nDespite this, some fringe theorists remain unconvinced of the rational explanation and have taken to wild speculation, claiming that Mars is inhabited by everything from aliens to mole people or dinosaurs."
+	PBNews.260.a:0 "The chances of anything being on Mars are a million to one!"
+
+  PBNews.261.t:0 "ALIEN LIFE?"
+  PBNews.261.d:0 ""
+  PBNews.261.a:0 "What wonders might they bring us?"
+
+  PBNews.262.t:0 "ALIEN MASSACRE!"
+  PBNews.262.d:0 ""
+  PBNews.262.a:0 "What the hell?"
+
+  PBNews.263.t:0 "ALIENS INVADE BRITAIN"
+  PBNews.263.d:0 ""
+  PBNews.263.a:0 "They could have at least invaded Manchester first."
+
+  PBNews.264.t:0 "ALIENS LAND IN TUNGUSKA"
+  PBNews.264.d:0 ""
+  PBNews.264.a:0 "I suppose they went a bit off course."
+  
+  PBNews.265.t:0 "MARTIAN FLU?"
+  PBNews.265.d:0 ""
+  PBNews.265.a:0 "Apparently they'd never heard of vaccines."
+
+  PBNews.266.t:0 "LEAGUE OF EARTH FORMED"
+  PBNews.266.d:0 ""
+  PBNews.266.a:0 "Let's kill those Martian bastards, together."
+
+  PBNews.267.t:0 "MARTIANS SURRENDER"
+  PBNews.267.d:0 ""
+  PBNews.267.a:0 "They invaded the wrong planet."
+  
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
