Doctrine rebalancing work

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -399,6 +399,10 @@ PB_Culture_Pashtun_tt:0 "Pashtun"
 PB_Culture_Balochi_tt:0 "Balochi"
 PB_Culture_Afghan_tt:0 "Afghan"
 
+# JOKE #
+
+PB_Culture_Martian_tt:0 "Martian"
+
 
 ## -------- Expanded Lore -------- ##
 
@@ -734,3 +738,6 @@ PB_Culture_Tibeto_Burman_tt_delayed:0 ""
 PB_Culture_Pashtun_tt_delayed:0 "The Pashtun cultural group is a collection of people distributed across Southern Afghanistan and parts of the northwestern Raj; it is most notably tied to the following the traditional "Pashtunwali" lifestyle. The Pasthunwali lifestyle (often interpreted to mean "Way of the Afghans") extolls the importance of virtues such as hospitality, justice, and independence while also emphasizing the importance of collective defense, and seeking revenge against wrongdoers. \n\nPashtun tribes exist largely in rural areas where the hand of the central government is mostly absent; this has allowed the Pashtuni people to maintain such a traditional lifestyle through many generations, going as far back as 2000 BC."
 PB_Culture_Balochi_tt_delayed:0 ""
 PB_Culture_Afghan_tt_delayed:0 ""
+
+# JOKE #
+PB_Culture_Martian_tt_delayed:0 ""
