--- a/localisation/english/PB_Martians_l_english.yml
+++ b/localisation/english/PB_Martians_l_english.yml
@@ -2,8 +2,11 @@
 
 # Spirits #
   PB_Mars_First_Wave:0 "The First Wave"
+  PB_Mars_First_Wave_TFH:0 "The First Wave"
   PB_Mars_Extermination_or_Extinction:0 "Extermination or Extinction"
   PB_Mars_Stunted_Development:0 "Stunted Development"
+
+  PB_Alien_Panic:0 "The Great Red Panic"
 
 # Events #
   invasion.1.t:0 "Flashes on Mars Detected"
@@ -13,3 +16,40 @@
   invasion.2.t:0 "Meteor Crashes in New Jersey"
   invasion.2.d:0 ""
   invasion.2.a:0 "Is that thing...moving?"
+
+  invasion.3.t:0 "Massacre in New Jersey"
+  invasion.3.d:0 ""
+  invasion.3.a:0 "Those alien bastards are gonna pay!"
+  invasion.3.b:0 "Maybe the aliens have the right idea?"
+
+# Decisions #
+  PB_MARS_Invasion_Command:0 "Central Invasion Command"
+  PB_MARS_Invasion_Command_desc:0 "WIP"
+  PB_Mars_Incoming_Reinforcements:0 "Incoming Reinforcements"
+  PB_Establish_Eastern_States_Occupation:0 "Establish the Northeast Occupation Authority"
+
+# Cosmetic Tags #
+  TFH_Occupation_ni:0 "American Forward Operations Quadrant"
+  TFH_Occupation_ni_DEF:0 "The American Forward Operations Quadrant"
+  TFH_Occupation_ds:0 "American Forward Operations Quadrant"
+  TFH_Occupation_ds_DEF:0 "The American Forward Operations Quadrant"
+  TFH_Occupation_rc:0 "American Forward Operations Quadrant"
+  TFH_Occupation_rc_DEF:0 "The American Forward Operations Quadrant"
+  TFH_Occupation_an:0 "American Forward Operations Quadrant"
+  TFH_Occupation_an_DEF:0 "The American Forward Operations Quadrant"
+  TFH_Occupation_cn:0 "American Forward Operations Quadrant"
+  TFH_Occupation_cn_DEF:0 "The American Forward Operations Quadrant"
+  TFH_Occupation_lb:0 "American Forward Operations Quadrant"
+  TFH_Occupation_lb_DEF:0 "The American Forward Operations Quadrant"
+  TFH_Occupation_ss:0 "American Forward Operations Quadrant"
+  TFH_Occupation_ss_DEF:0 "The American Forward Operations Quadrant"
+  TFH_Occupation_jc:0 "American Forward Operations Quadrant"
+  TFH_Occupation_jc_DEF:0 "The American Forward Operations Quadrant"
+  TFH_Occupation_ni_ADJ:0 "Martian"
+  TFH_Occupation_rc_ADJ:0 "Martian"
+  TFH_Occupation_lb_ADJ:0 "Martian"
+  TFH_Occupation_ss_ADJ:0 "Martian"
+  TFH_Occupation_jc_ADJ:0 "Martian"
+  TFH_Occupation_ds_ADJ:0 "Martian"
+  TFH_Occupation_cn_ADJ:0 "Martian"
+  TFH_Occupation_an_ADJ:0 "Martian"
