just dropping off my load

--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -324,6 +324,10 @@
   AME_Michigan_Secured_tt:0 "Michigan Secured [AME.GetFlag]"
 
   AME_Gets_Cavelier:0 "[AME.GetFlag]§RUnited Commenwealth§! will get §YCavelier§!"
+  AME_Gets_Wisconsin:0 "[AME.GetFlag]§RUnited Commenwealth§! will get §YWisconsin§!"
+  AME_Gets_Michigan:0 "[AME.GetFlag]§RUnited Commenwealth§! will get §YMichigan§!"
+  AME_Gets_Huron:0 "[AME.GetFlag]§RUnited Commenwealth§! will get §YHuron§!"
+  AME_Gets_Superieur:0 "[AME.GetFlag]§RUnited Commenwealth§! will get §YSuperieur§!"
 
   AME_ANG_Crisis_Warning_UK_tt:0 "§RThe United Commenwealth will attempt to expand their influence in the Confederation by gaining control over the Angloi Provinces of Quebec!\n\nWe have to make sure to contain them, before they completely neuter Quebec!§!"
 
@@ -362,21 +366,36 @@
   Anglois_Crisis.4.d:0 "The results of years of neglect and discrimination by the Québécois Commenwealth have resulted in chaos.\nWith the arrival of the economic crash in the Midwest States, the Anglois Population lost their last reason to stay quiet. With news of no promises social bailout and an rather untactful interview by Prime Minister Hamel, the situation has exploded.\nThe English-Speaking Angloi Population has risen up against their Québécois government and demand that the United Commenwealth intervene for their livelihoods. Violent Clashes are now underway in Chicagou and Détroit with more reports coming in."
   Anglois_Crisis.4.a:0 "A Confederation of Imperfection"
 
-  Anglois_Crisis.5.t:0 "Philadelphia demands the Transfer of Cavelier"
-  Anglois_Crisis.5.d:0 "Rising Unrest in Angloi-Quebec"
-  Anglois_Crisis.5.a:0 "A new oppurtunity?"
+  Anglois_Crisis.5.t:0 "UC demands the Transfer of Cavelier"
+  Anglois_Crisis.5.d:0 ""
+  Anglois_Crisis.5.a:0 "Concessions must be made"
+  Anglois_Crisis.5.b:0 "The border will not change"
 
   Anglois_Crisis.6.t:0 "London transfers Cavelier to us"
-  Anglois_Crisis.6.d:0 "Rising Unrest in Angloi-Quebec"
+  Anglois_Crisis.6.d:0 ""
   Anglois_Crisis.6.a:0 "The first big step"
 
-  Anglois_Crisis.7.t:0 "Philadelphia demands the Transfer of Cavelier"
-  Anglois_Crisis.7.d:0 "Rising Unrest in Angloi-Quebec"
-  Anglois_Crisis.7.a:0 "It would unwise for them to continue this."
+  Anglois_Crisis.7.t:0 "London rejects our demands for Cavelier"
+  Anglois_Crisis.7.d:0 ""
+  Anglois_Crisis.7.a:0 "They will fold on this issue."
 
-  Anglois_Crisis.14.t:0 "Philadelphia demands the Transfer of Wisconsin"
-  Anglois_Crisis.14.d:0 "Rising Unrest in Angloi-Quebec"
-  Anglois_Crisis.14.a:0 "A new oppurtunity?"
+  Anglois_Crisis.8.t:0 "UC demands the Transfer of Wisconsin"
+  Anglois_Crisis.8.d:0 ""
+  Anglois_Crisis.8.a:0 "Quebec can not take care of the border anyway..."
+  Anglois_Crisis.8.b:0 "This is going to far."
+
+  Anglois_Crisis.9.t:0 "London transfers Wisconsin to us"
+  Anglois_Crisis.9.d:0 ""
+  Anglois_Crisis.9.a:0 "The frontier is ours again"
+
+  Anglois_Crisis.10.t:0 "London rejects our demands for Wisconsin"
+  Anglois_Crisis.10.d:0 ""
+  Anglois_Crisis.10.a:0 "What do they care for Wisconsin?"
+
+
+
+
+
 
 
   Anglois_Crisis.33.t:0 "United Commenwealth offers bailout"
