--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -402,6 +402,16 @@
  artillery_equipment:0 "Towed Artillery"
  artillery_equipment_short:0 "Artillery"
  artillery_equipment_desc:0 "Artillery refers to large-caliber weapons, such as cannons and howitzers that are operated by crews, which can project munitions far beyond the effective range of personal weapons."
+ anti_air_equipment:0 "Towed Anti-Air"
+ anti_air_equipment_short:0 "Anti-Air"
+ anti_air_equipment_desc:0 "Anti-air artillery is primarily designed to shoot down hostile planes, although the rapid fire cannons can also be effective against ground targets."
+ anti_tank_equipment:0 "Towed Anti-Tank"
+ anti_tank_equipment_short:0 "Anti-Tank"
+ anti_tank_equipment_desc:0 "Artillery specialized in defeating armored targets like Tanks, it generally fires armor piercing shells."
+ rocket_artillery_equipment:0 "Towed Rocket Artillery"
+ rocket_artillery_equipment_short:0 "Rocket Artillery"
+ rocket_artillery_equipment_desc:0 "Rocket artillery is less accurate and has a much lower sustained rate of fire than batteries of traditional artillery guns. However, they have the capability of simultaneously hitting a target with multiple rockets with devastating effect."
+
 
  gw_armored_car_equipment:0 "Interwar Armored Car"
  gw_armored_car_equipment_desc:0 "Where previous armored cars were simple commercial models with thin steel plating, this model was designed from the ground up to carry armor and light armament."
