--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -175,9 +175,11 @@
 
   PB_PRS_The_Origin_Of_Our_Race_tt:0 "\n§gUnlocks the ability to £PRS_shovel §HExcavate§! sites across the globe in the pursuit of creating a state accepted view towards the history of our peoples. You will be able to improve the §YÜbermensch§! spirit through excavations.§!\n\n"
   PB_PRS_Origin_Of_Our_People:0 "Excavation Sites"
-  PB_PRS_Origin_Of_Our_People_desc:0 "\n\n\n\n\n\nOfficial party policy towards the origin of the Prussian race, and more broadly all germanic speaking peoples, has been neglected since the establishment of the bouhler regime. The time has now come to for us to arrange some sort of history of our peoples through excavation efforts accross the globe.\n\nCurrent number of Excavation points: £PRS_shovel  §H[?PRS_Exc_P]§!\n\nDifferent excavation sites will give different bonuses; the excavation sites are viewable through the in-game."
+  PB_PRS_Origin_Of_Our_People_desc:0 "\n\n\n\n\n\nOfficial party policy towards the origin of the Prussian race, and more broadly all germanic speaking peoples, has been neglected since the establishment of the bouhler regime. The time has now come to for us to arrange some sort of history of our peoples through excavation efforts accross the globe.\n\nCurrent number of Excavation points: £PRS_shovel  §H[?PRS_Exc_P]§!\n\nDifferent excavation sites will give different bonuses; the excavation sites are viewable through the in-game map."
   PRS_Purchase_Excavation_Points:0 "Purchase Excavation Points"
   PRS_Purchase_Excavation_Points_tt:0 "£PRS_shovel Excavation Points: §G+1§!"
+  PRS_Purchase_Excavation_Points_3:0 "Purchase Excavation Points X3"
+  PRS_Purchase_Excavation_Points_3_tt:0 "£PRS_shovel Excavation Points: §G+3§!"
   PRS_Norrland_Excavation_Site:0 "Norrland Excavation Site"
   PRS_Norrland_Excavation_Site_desc:0 "Norrland Excavation Site Report: Several survey teams have reported a large number of tools and weaponary belonging to a long forgotten germanic tribe dating back to be classical times. The list of items include spears, bronze armour, and a handful of clay pots and odd crafts."
   PRS_Norrland_Excavation_Site_tt:0 "§YÜbermensch§!: §G+3%§! Division Recovery Rate"
@@ -199,6 +201,12 @@
   PRS_Saxony_Excavation_Site:0 "Saxony Excavation Site"
   PRS_Saxony_Excavation_Site_desc:0 "Saxony Excavation Site Report: Recent findings of local Saxon tribes predating the rise of Rome by about two hundred years has recently just been discovered on the outskirts of Dresden. Important information regarding early hunting practises of the local tribal germans has been reported among other findings."
   PRS_Saxony_Excavation_Site_tt:0 "§YÜbermensch§!: §G+15%§! Monthly Population Growth"
+  PRS_Nantes_Excavation_Site_tt:0 "§YÜbermensch§!: §G+10%§! Factory Output"
+  PRS_Nantes_Excavation_Site:0 "Nantes Excavation Site"
+  PRS_Nantes_Excavation_Site_desc:0 "Nantes Excavation Site Report: Residents within the major French coastal city of Nantes have uncovered an old viking burial ground, we should muster a team and further our knowledge on this vital aspect of Norse history."
+  PRS_Nice_Excavation_Site:0 "Nice Excavation Site"
+  PRS_Nice_Excavation_Site_desc:0 "Nice Excavation Site Report: Reports have indicated that Nice was once a major hub for gallic trade and commerce and that many Germanic tribes engaged with the local citizens of the area."
+  PRS_Nice_Excavation_Site_tt:0 "§YÜbermensch§!: §G-5%§! Lack of Resources Penalty"
 
   PB_PRS_Consolidate_The_State:0 "Consolidate The State"
   PB_PRS_Consolidate_The_State_desc:0 "\n\n\n\n\n\nNeo-Imperialist party popularity: [?party_popularity@ni|%H0] I Anarcho-Liberals party popularity: [?party_popularity@an|%H0]"
