Prussian Neo-Imp Path near completion

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -115,6 +115,9 @@
   PB_PRS_The_Men_In_Black_tt:0 "\n§gEnables the International mechanic, allowing for the infiltration of government networks across the globe. Engaging with this mechanic is the only way to receive new research slots.§!"
   PB_PRS_Imperium_In_Imperio_tt:0 "Has concluded the International mechanic"
   PB_PRS_Establish_Council_Presence_NA_tt:0 "§GUnlocks§! Council operations in North America"
+  PB_PRS_Promote_Europeanism_2_tt:0 "\nIf you have the §YYouth Camps§! national Spirit, you will gain an additional: §G+1.00%§! §HRecruitable Population§!\n\nThe Youth Programs National Spirit can be found in the following focus:\n\n\n\n\n£GFX_PRS_Youth_Program_Spirit\n\n\n \n\n\n"
+  PB_PRS_A_Reich_Of_Our_Own_tt:0 "§GAdd§! the following hidden idea:\n"
+
 
   ##########################
   # MECHANICS
@@ -172,6 +175,7 @@
   PRS_Open_New_Academies_desc:0 "Our nation is small, but we cannot let that define our willingness to fight. We may not we a global superpower but we will fight like dogs to secure our position in Europe's changing order."
   PRS_Hold_Military_Parades:0 "Hold State-Wide Military Parades"
   PRS_Stabilize_The_Nation:0 "Stabilize The Nation"
+  PRS_Arm_The_Anti_Revolutionaries:0 "Arm The Anti-Revolutionaries"
 
   PB_PRS_The_Origin_Of_Our_Race_tt:0 "\n§gUnlocks the ability to £PRS_shovel §HExcavate§! sites across the globe in the pursuit of creating a state accepted view towards the history of our peoples. You will be able to improve the §YÜbermensch§! spirit through excavations.§!\n\n"
   PB_PRS_Origin_Of_Our_People:0 "Excavation Sites"
@@ -289,6 +293,7 @@
   PRS_Siphon_Caucasian_Profits:0 "Siphon Caucasian Profits"
   PRS_Consolidate_Council_Control_Over_The_Middle_East:0 "Consolidate Council Control Over The Middle East"
   PRS_Declare_The_Empire:0 "Declare The Empire"
+  
 
 
   ##########################
@@ -296,6 +301,7 @@
   ##########################
 
   PRS_Race_Origin:0 "Übermensch"
+  PRS_Resist_The_Enemy:0 "Resist The Enemy"
 
   ##########################
   # OCCUPATION LAWS
@@ -351,6 +357,7 @@
   PB_PRS_Urbanize_The_Wilds_2:0 "Unity Through Sacrifice"
 
   PB_PRS_Youth_Programs:0 "Youth Programs"
+  PB_PRS_Youth_Programs_2:0 "Youth Programs"
 
   PB_PRS_Anti_Jacobin_Crusade:0 "Anti-Jacobin Crusade"
 
@@ -380,6 +387,8 @@
   PB_PRS_Influx_Of_Exiles:0 "Influx Of Exiles"
 
   PB_PRS_Surrounded_On_All_Sides:0 "Surrounded On All Sides"
+
+  PRS_Greater_Reich_idea:0 "Greater Reich"
 
   ##########################
   # Ministers/Generals/Tech Teams
@@ -448,15 +457,15 @@
   PB_PRS_Concord_With_Faith:0 "Concord With Faith"
   PB_PRS_Concord_With_Faith_desc:0 "If we are to revive the spirit of this great nation then we must look to back at our past victories and glories if we are to survive the horrors of tomorrow.\n\nThere is no better a legacy to draw from then that of the Teutonic Order, a hyper militarised-religious state fixated on one purpose, we shall follow these teachings to a certain degree so that future generations will look back at us has we have done to the Teutons of old."
   PB_PRS_The_Origin_Of_Our_Race:0 "The Origin Of Our Race"
-  PB_PRS_The_Origin_Of_Our_Race_desc:0 ""
+  PB_PRS_The_Origin_Of_Our_Race_desc:0 "All across the world, anthropologists question our ideas of the Germanic race. These are merely lies and propaganda, set up to discredit our nation and our honour. But our word alone is not enough to verify these claims, proof is required. We must begin funding expeditions to the corners of the world, the birth places of our people. Find the physical evidence of our origins to show the world, that we are the true inheritors of Europe. And who knows, maybe we'll find the Ark of the Covenant along the way?"
   PB_PRS_The_Next_Generation_Of_Prussians:0 "The Next Generation of Prussians"
-  PB_PRS_The_Next_Generation_Of_Prussians_desc:0 ""
+  PB_PRS_The_Next_Generation_Of_Prussians_desc:0 "A wise man once said, 'He alone who owns the youth gains the future.' No truer words have been said. If the children read our books and follow our beliefs, they'll teach it to their children. And then they'll teach it to theirs and so on and so foruth. We must make sure our children's minds are not clouded by Jacobin ideology, capitalistic corruption or ideas of liberalist democracy. They will know of Prussian glory and the exceptionalism of our military. The tales of Prussia's glory shall be engrained in the midns of our youth for centuries to come!"
   PB_PRS_Strengthen_The_Party:0 "Strengthen The Party"
   PB_PRS_Strengthen_The_Party_desc:0 ""
   PB_PRS_Release_The_Hounds:0 "Release The Hounds"
-  PB_PRS_Release_The_Hounds_desc:0 ""
+  PB_PRS_Release_The_Hounds_desc:0 "If Prussia is to secure dominance across Europe, we must make sure we secure the absolute loyalty of the people. There are two ways this can be achieved, incentives and intimidation. We have already achieved the first half with our economic growth, it is time to make use of the second. Our internal security forces will make use of physical and psychological intimidation tactics to silence even the slightest whisper of dissent. Anyone who shows even the slightest disloyalty will either be corrected or removed."
   PB_PRS_The_Exceptional_Prussian:0 "The Exceptional Prussian"
-  PB_PRS_The_Exceptional_Prussian_desc:0 ""
+  PB_PRS_The_Exceptional_Prussian_desc:0 " The Prussian nation is not just superior to the rest of Europe due to our culture or industry, it is our very biology that proves them. The other inferior races of Europe, and even the world, squabble amongst themselves in their feele bodies and malformed bones. But we stand above that. Our physiology, psychology and our intellect are all genetically superior to all those inferior peoples. We must champion the work of the men of scienece who work to prove this fact to those who would deny biological fact. Men like Dr. Josef Mengele."
   PB_PRS_Turn_Away_The_False_Hand:0 "Turn Away The False Hand"
   PB_PRS_Turn_Away_The_False_Hand_desc:0 "In a tense diplomatic standoff, Bouhler announced that the "Proud nation of Prussia unequivocally rejected the coercive pressures exerted by the formidable Russian Empire. With a rich history of sovereignty and independence, our proud nation staunchly defends its national interests and refuses to yield to external interference." Already Russia has taken a hostile attitude towards such a statement but has refused to comment any further on announcement Bouhler made today. Now we must sit and wait to see if the Bear tries anything too rash."
   PB_PRS_Sins_Of_A_Forgotten_Kind:0 "Sins Of A Forgotten Kind"
@@ -466,9 +475,9 @@
   PB_PRS_Our_Mightiest_Hero:0 "Our Mightiest Hero"
   PB_PRS_Our_Mightiest_Hero_desc:0 ""
   PB_PRS_The_Time_Is_Now:0 "The Time Is Now"
-  PB_PRS_The_Time_Is_Now_desc:0 ""
+  PB_PRS_The_Time_Is_Now_desc:0 "For the second time this century, Europe is burning. Jacobin ideology continues to spread amoungst the unruly classes of society. France's Revanchist government is making moves to make up for lost territory. And Britain's eyes remain across the Atlantic, blind to the goings on of Europe. As stability becomes a pipe dream, we are presented a rare opportunity to carve out a slice of the continent for ourselves. Prussian glory will be restored, and it will be earn through blood and steel."
   PB_PRS_Construct_The_Western_Line:0 "Construct The Western Line"
-  PB_PRS_Construct_The_Western_Line_desc:0 ""
+  PB_PRS_Construct_The_Western_Line_desc:0 "To our west, lies our most hated rival. The United Kingdoms of 'Germany'. Filled with Liberals and Jacobins, conflict is inevitable. While the best defence is a good offence, refusing to impliment any static defences along our relatively small border would be a fool's errand. Construction of the so called 'Western Line', will provide some defensive capabilies in the unlikely event our initial assault into Germany proper is repelled."
   PB_PRS_Alone_In_A_Sea_Of_Giants:0 "Alone In A Sea Of Giants"
   PB_PRS_Alone_In_A_Sea_Of_Giants_desc:0 "With our surgicial removal of Russian influence from our state we now find ourselves drifting aimlessly without any international support, but there is a potential ally in Paris that may take an interest in us. "
   PB_PRS_Europes_Reactionary_Bastion:0 "Europe's Reactionary Bastion"
