--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -112,11 +112,13 @@
   PB_PRS_The_Last_One_Standing_tt:0 "\nWe must holdout against the Pacte for 250 days if we wish to prove ourselves as the legitimate German state.\n\nYou must complete all the below focuses while at war with the Pacte if you wish to inherit the remains of Habsburg Germany."
   PB_PRS_Germany_United_tt:0 "Once France is defeated you will gain control over all French occupied regions in Germany, same for Russia as well.\n\n"
   PB_PRS_Alliance_With_The_Anglos_tt:0 "\n§gThe British AI will always approve of this request§!"
-  PB_PRS_The_Men_In_Black_tt:0 "\n§gEnables the International mechanic, allowing for the infiltration of government networks across the globe. Engaging with this mechanic is the only way to receive new research slots.§!"
+  PB_PRS_The_Men_In_Black_tt:0 "\n§gEnables the International mechanic, allowing for the infiltration of government networks across the globe. Engaging with this mechanic is the only way to receive new§! §CResearch Slots.§!"
   PB_PRS_Imperium_In_Imperio_tt:0 "Has concluded the International mechanic"
   PB_PRS_Establish_Council_Presence_NA_tt:0 "§GUnlocks§! Council operations in North America"
   PB_PRS_Promote_Europeanism_2_tt:0 "\nIf you have the §YYouth Camps§! national Spirit, you will gain an additional: §G+1.00%§! §HRecruitable Population§!\n\nThe Youth Programs National Spirit can be found in the following focus:\n\n\n\n\n£GFX_PRS_Youth_Program_Spirit\n\n\n \n\n\n"
   PB_PRS_A_Reich_Of_Our_Own_tt:0 "§GAdd§! the following hidden idea:\n"
+  PB_PRS_Prussia_On_The_World_Stage_tt:0 "Give §YThe Italian Social Republic§! market access."
+  PB_PRS_Prussia_On_The_World_Stage_2_tt:0 "Give §YThe Holy Order of Spain§! market access."
 
 
   ##########################
